--- a/news.html
+++ b/news.html
@@ -21,25 +21,31 @@
 </head>
 
 <body>
-    <header id="header">
+    <header>
         <div class="header-block container">
             <div>
                 <a href="index"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
             </div>
-            <nav class="nav-header">
-                <a href="about.html" target="_blank">Про нас</a>
-                <a href="news.html" target="_blank">Новини</a>
-                <a href="index#projects">Заходи</a>
-                <a href="index#gallery">Галерея</a>
-                <a href="#footer">Контакти</a>
-            </nav>
-            <div class="follow-header">
-                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png"
-                        alt="Facebook"></a>
-                <a href="https://t.me/ngodim" target="_blank"><img src="img/header/telegram.png" alt="Telegram"></a>
-                <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/header/instagram.png"
-                        alt="Instagram"></a>
+            <div class="menu__icon">
+                <span></span>
             </div>
+            <nav class="nav-header" id="navbar">
+                <ul class="menu__list">
+                    <li><a href="about" target="_blank" class="menu__link">Про нас</a></li>
+                    <li><a href="news" class="menu__link">Новини</a></li>
+                    <li><a href="index#projects" data-goto="#projects" class="menu__link">Заходи</a></li>
+                    <li><a href="index#gallery" data-goto="#gallery" class="menu__link">Галерея</a></li>
+                    <li><a href="#" data-goto="#footer" class="menu__link">Контакти</a></li>
+                    <div class="follow-header">
+                        <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png"
+                                alt="Facebook"></a>
+                        <a href="https://t.me/ngodim" target="_blank"><img src="img/header/telegram.png"
+                                alt="Telegram"></a>
+                        <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img
+                                src="img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                </ul>
+            </nav>
         </div>
     </header>
     <main>
@@ -165,6 +171,7 @@
         </div>
     </footer>
     <script src="js/news-carrousel.js"></script>
+    <script src="js/burger-menu.js"></script>
 </body>
 
 </html>
