--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300;500&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/png">
     <meta name="description"
         content="Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримуємо від цього задоволення.">
@@ -83,7 +84,7 @@
                 <hr>
                 <h2>Молодіжна громадська організація</h2>
                 <br><br>
-                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button">Підтримати<span></span></a>
+                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button">Підтримати <i class='fa fa-credit-card'  style="font-size:25px"></i></a>
             </div>
         </section>
         <section class="about-us">
