--- a/news.html
+++ b/news.html
@@ -49,67 +49,33 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <div class="right-new">
-                <div class="slideshow-container">
-                    <div class="mySlides1">
-                        <img src="/img/news/25.08.2021/photo (1).jpg">
-                    </div>
-                    <div class="mySlides1">
-                        <img src="/img/news/25.08.2021/photo (2).jpg">
-                    </div>
-                    <div class="mySlides1">
-                        <img src="/img/news/25.08.2021/photo (3).jpg">
-                    </div>
-                    <div class="mySlides1">
-                        <img src="/img/news/25.08.2021/photo (4).jpg">
-                    </div>
-                    <div class="mySlides1">
-                        <img src="/img/news/25.08.2021/photo (5).jpg">
-                    </div>
-                    <a class="prev" onclick="plusSlides(-1, 0)">❮</a>
-                    <a class="next" onclick="plusSlides(1, 0)">❯</a>
+        <div class="news container">
+            <!-- <div class="news-block">
+                <div class="img-preview">
+                    <img src="img/news/25.08.2021/photo (2).jpg" alt="День незалежності">
                 </div>
-                <div class="text">
-                    <div class="centre">
-                        <p class="date">25 серпня 2021 рік</p>
-                        <p class="text-news">Слава Україні!💙💛
-                            Вітаємо всіх з тридцятиріччям нашої неньки! Вчора ми мали можливість долучитися до
-                            святкування
-                            Дня Незалежності в смт Добротвір.
-                            Наша команда доклала максимум зусиль, щоб створити незабутнє свято для маленьких патріотів.
-                            Разом ми танцювали та малювали. Діти взяли участь у майстер-класі від Аліни Давидович,
-                            показали
-                            своїм знанням на бліц-опитуванні, а також кмітливість в естафетах. Кожна дитина отримала
-                            невеличкий приз за свої старання.
-                            І все це відбулося за підтримки Добротвірської селищної ради.</p>
+                <div class="description">
+                    <div class="news-data">
+                        <h5>25 серпня 2021</h5>
+                    </div>
+                    <div class="news-text">
+                        <h3>Слава Україні!💙💛<br>
+                            Вітаємо всіх з тридцятиріччям нашої неньки! Вчора ми мали можливість долучитися до святкування Дня Незалежності в смт Добротвір.
+                            <br> Наша команда доклала...</h3>
+                    </div>
+                    <a href="#">Читати далі</a>
+                    <div class="news-follow">
+                        <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png"
+                                alt="Facebook"></a>
+                        <a href="https://t.me/ngodim" target="_blank"><img src="img/header/telegram.png"
+                                alt="Telegram"></a>
+                        <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img
+                                src="img/header/instagram.png" alt="Instagram"></a>
                     </div>
                 </div>
             </div>
-            <hr>
-            <div class="left-news">
-                <div class="text">
-                    <div class="centre">
-                        <p class="date">21 серпня 2021 рік</p>
-                        <p class="text-news">Святкуйте 30-річчя Незалежності України разом з нами🇺🇦</p>
-                    </div>
-                </div>
-                <div class="slideshow-container">
-                    <div class="mySlides2">
-                        <img src="/img/news/21.08.2021/photo (1).jpg">
-                    </div>
-                    <div class="mySlides2">
-                        <img src="/img/news/25.08.2021/photo (2).jpg">
-                    </div>
-                    <div class="mySlides2">
-                        <img src="/img/news/25.08.2021/photo (3).jpg">
-                    </div>
-
-                    <a class="prev" onclick="plusSlides(-1, 1)">❮</a>
-                    <a class="next" onclick="plusSlides(1, 1)">❯</a>
-                </div>
-
-            </div>
+            <hr> -->
+        </div>
     </main>
     <footer id="footer">
         <div>
@@ -170,8 +136,10 @@
         </div>
         </div>
     </footer>
-    <script src="js/news-carrousel.js"></script>
+    <!-- <script src="js/news-carrousel.js"></script> -->
     <script src="js/burger-menu.js"></script>
+    <script src="js/news.js"></script>
+
 </body>
 
 </html>
