update news page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300;500&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/png">
     <meta name="description"
         content="Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримуємо від цього задоволення.">
@@ -44,10 +44,6 @@
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PMBRRCW" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <header>
         <div class="header-block container">
             <div>
@@ -58,11 +54,11 @@
             </div>
             <nav class="nav-header" id="navbar">
                 <ul class="menu__list">
-                    <li><a href="about" target="_blank" class="menu__link">Про нас</a></li>
-                    <li><a href="news" target="_blank" class="menu__link">Новини</a></li>
-                    <li><a href="#" data-goto="#projects" class="menu__link">Заходи</a></li>
-                    <li><a href="#" data-goto="#gallery" class="menu__link">Галерея</a></li>
-                    <li><a href="#" data-goto="#footer" class="menu__link">Контакти</a></li>
+                        <li><a href="about" target="_blank" class="menu__link">Про нас</a></li>
+                        <li><a href="news" target="_blank" class="menu__link">Новини</a></li>
+                        <li><a href="#" data-goto="#projects" class="menu__link">Заходи</a></li>
+                        <li><a href="#" data-goto="#gallery" class="menu__link">Галерея</a></li>
+                        <li><a href="#" data-goto="#footer" class="menu__link">Контакти</a></li>
                     <div class="follow-header">
                         <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png"
                                 alt="Facebook"></a>
@@ -84,7 +80,8 @@
                 <hr>
                 <h2>Молодіжна громадська організація</h2>
                 <br><br>
-                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button">Підтримати <i class='fa fa-credit-card'  style="font-size:25px"></i></a>
+                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button">Підтримати <i
+                        class='fa fa-credit-card' style="font-size:25px"></i></a>
             </div>
         </section>
         <section class="about-us">
@@ -192,15 +189,21 @@
             </div>
             <div class="projects-blocks container">
                 <div class="projects-card">
-                    <div class="projects-card-img card-img-holiday" id="card-img-holiday"></div>
+                    <div class="projects-card-img card-img-holiday" id="card-img-holiday">
+                        <!-- <img src="img/index/projects/holiday.avif" alt=""> -->
+                    </div>
                     <p>Державні свята</p>
                 </div>
                 <div class="projects-card">
-                    <div class="projects-card-img card-img-camps" id="card-img-camps"></div>
+                    <div class="projects-card-img card-img-camps" id="card-img-camps">
+                        <!-- <img src="img/index/projects/camps.avif" alt=""> -->
+                    </div>
                     <p>Табори</p>
                 </div>
                 <div class="projects-card">
-                    <div class="projects-card-img card-img-mykolia" id="card-img-mykolia"></div>
+                    <div class="projects-card-img card-img-mykolia" id="card-img-mykolia">
+                        <!-- <img src="img/index/projects/mykolia.avif" alt=""> -->
+                    </div>
                     <p>День Святого Миколая</p>
                 </div>
             </div>
