--- a/news.html
+++ b/news.html
@@ -49,33 +49,7 @@
         </div>
     </header>
     <main>
-        <div class="news container">
-            <!-- <div class="news-block">
-                <div class="img-preview">
-                    <img src="img/news/25.08.2021/photo (2).jpg" alt="День незалежності">
-                </div>
-                <div class="description">
-                    <div class="news-data">
-                        <h5>25 серпня 2021</h5>
-                    </div>
-                    <div class="news-text">
-                        <h3>Слава Україні!💙💛<br>
-                            Вітаємо всіх з тридцятиріччям нашої неньки! Вчора ми мали можливість долучитися до святкування Дня Незалежності в смт Добротвір.
-                            <br> Наша команда доклала...</h3>
-                    </div>
-                    <a href="#">Читати далі</a>
-                    <div class="news-follow">
-                        <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png"
-                                alt="Facebook"></a>
-                        <a href="https://t.me/ngodim" target="_blank"><img src="img/header/telegram.png"
-                                alt="Telegram"></a>
-                        <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img
-                                src="img/header/instagram.png" alt="Instagram"></a>
-                    </div>
-                </div>
-            </div>
-            <hr> -->
-        </div>
+        <div class="news container"></div>
     </main>
     <footer id="footer">
         <div>
