finish news page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <hr>
                 <h2>Молодіжна громадська організація</h2>
                 <br><br>
-                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button">Підтримати <i
+                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button" target="_blank">Підтримати <i
                         class='fa fa-credit-card' style="font-size:25px"></i></a>
             </div>
         </section>
