--- a/news.html
+++ b/news.html
@@ -49,6 +49,7 @@
         </div>
     </header>
     <main>
+        <button onclick="topFunction()" id="myBtn" title="Піднятися на верх"><img src="/img/index/arrow-up.png"></button>
         <div class="news container"></div>
     </main>
     <footer id="footer">
@@ -110,7 +111,7 @@
         </div>
         </div>
     </footer>
-    <!-- <script src="js/news-carrousel.js"></script> -->
+    <script src="js/index-listeners.js"></script>
     <script src="js/burger-menu.js"></script>
     <script src="js/news.js"></script>
 
