--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="about-numbers-card">
                     <h2>450+</h2>
                     <hr>
-                    <p>Задоволених дітей</p>
+                    <p>Щасливих дітей</p>
                 </div>
             </div>
         </section>
